--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -143,6 +143,8 @@ Error message and password prompt
 
 <li>$:/core</li>
 
+<li>$:/DefaultTiddlers</li>
+
 <li>$:/GitHub/Branch</li>
 
 <li>$:/GitHub/Filename</li>
@@ -10057,6 +10059,10 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20210408055722076" modified="20210408055722457" title="$:/DefaultTiddlers">
+<pre>GettingStarted
+asfasf</pre>
+</div>
 <div created="20210408053220492" modified="20210408054516276" title="$:/GitHub/Branch">
 <pre>master</pre>
 </div>
@@ -13945,7 +13951,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210408052830934" list="$:/ControlPanel $:/languages/zh-Hans GettingStarted" modified="20210408053447031" title="$:/StoryList">
+<div created="20210408052830934" list="$:/ControlPanel GettingStarted" modified="20210408053447031" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
