--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -181,6 +181,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>掌控气象</li>
+
 </ul>
 </p>
 
@@ -13951,7 +13953,7 @@ asfasf</pre>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210408052830934" list="$:/ControlPanel GettingStarted" modified="20210408053447031" title="$:/StoryList">
+<div list="掌控气象 GettingStarted asfasf" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
@@ -14062,6 +14064,11 @@ asfasf</pre>
         }
     }
 }</pre>
+</div>
+<div created="20210512061412930" modified="20210512061422092" tags="" title="掌控气象">
+<pre>高空气球风力发电机，搜索到有类似的想法 https://patents.google.com/patent/CN101476546A/zh，用这种东西获取全球空气流动信息。
+弄许多可快速移动和部署的大风扇（风力发电机？）根据全球空气流动信息，四两拨千斤，让全球风调雨顺。
+</pre>
 </div>
 
 
