--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -14065,7 +14065,7 @@ asfasf</pre>
     }
 }</pre>
 </div>
-<div created="20210512061412930" modified="20210512061422092" tags="" title="掌控气象">
+<div created="20210512061412930" modified="20210512061444176" tags="idea" title="掌控气象">
 <pre>高空气球风力发电机，搜索到有类似的想法 https://patents.google.com/patent/CN101476546A/zh，用这种东西获取全球空气流动信息。
 弄许多可快速移动和部署的大风扇（风力发电机？）根据全球空气流动信息，四两拨千斤，让全球风调雨顺。
 </pre>
