--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/DownloadSaver/AutoSave</li>
+
 <li>$:/core</li>
 
 <li>$:/DefaultTiddlers</li>
@@ -152,6 +154,8 @@ Error message and password prompt
 <li>$:/GitHub/Path</li>
 
 <li>$:/GitHub/Repo</li>
+
+<li>$:/GitHub/ServerURL</li>
 
 <li>$:/GitHub/Username</li>
 
@@ -197,6 +201,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20210512061847933" modified="20210512061847933" title="$:/config/DownloadSaver/AutoSave">
+<pre>yes</pre>
+</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.23">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -10077,6 +10084,9 @@ asfasf</pre>
 <div created="20210408053154028" modified="20210408054444848" title="$:/GitHub/Repo">
 <pre>xialvjun/xialvjun.github.io</pre>
 </div>
+<div created="20210512061921535" modified="20210512061921535" title="$:/GitHub/ServerURL">
+<pre></pre>
+</div>
 <div created="20210408052845933" modified="20210408052846770" title="$:/GitHub/Username">
 <pre>xialvjun</pre>
 </div>
@@ -13941,19 +13951,19 @@ asfasf</pre>
 <div created="20210408053417695" modified="20210408053417695" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Languages</pre>
 </div>
-<div created="20210408052832950" modified="20210408055246595" title="$:/state/tab-1749438307">
+<div created="20210408052832950" modified="20210512061910165" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20210408052840615" modified="20210408055305792" title="$:/state/tab-2065006209">
+<div created="20210408052840615" modified="20210512061855148" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20210408053347661" modified="20210408055230418" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20210408053347661" modified="20210512061553720" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="掌控气象 GettingStarted asfasf" title="$:/StoryList">
+<div created="20210512061547842" list="$:/ControlPanel $:/config/DownloadSaver/AutoSave 掌控气象 GettingStarted asfasf" modified="20210512061832694" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
